--- a/pom.xml
+++ b/pom.xml
@@ -19,21 +19,21 @@
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-java</artifactId>
-        <version>7.10.1</version>
+        <version>7.3.4</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit should be removed-->
-    <dependency>
+    <!--dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-junit</artifactId>
-        <version>7.10.1</version>
+        <version>7.3.4</version>
         <scope>test</scope>
-    </dependency>
+    </dependency-->
 
     <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-testng</artifactId>
-        <version>7.11.0</version>
+        <version>7.3.4</version>
     </dependency>
 
 
