--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,49 @@
 
 
 </dependencies>
+
+    <build>
+        <plugins>
+            <!-- you will add your plugins here in the following steps -->
+            <plugin>
+                <!-- https://maven.apache.org/surefire/maven-surefire-plugin/plugins.html -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <runOrder>Alphabetical</runOrder>
+                    <includes>
+                        <include>**/*TestRunner.java</include> <!-- this should be the name of your runner class -->
+                    </includes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- https://repo.maven.apache.org/maven2/net/masterthought/cucumber-reporting/ -->
+                <groupId>net.masterthought</groupId>
+                <artifactId>maven-cucumber-reporting</artifactId>
+                <version>5.7.0</version>
+                <executions>
+                    <execution>
+                        <id>execution</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <projectName>Cucumber HTML Reports</projectName>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <inputDirectory>${project.build.directory}</inputDirectory>
+                            <jsonFiles>
+                                <param>**/cucumber*.json</param>
+                            </jsonFiles>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
